2015-04-15  Kaz Kylheku  <kaz@kylheku.com>

	Fix escaping issues in open-process on Windows.

	This can now execute programs with spaces in their path names.
	Arguments can contain embedded double quotes, and other characters
	that are special to cmd.exe, like &, |, (, ), ^ and others.

	* stream.c (string_extend_count, win_escape_cmd): New static functions.
	(win_escape_arg): Fix and extend escaping scheme to cover not only
	the argument processing scheme implemented by programs which use Microsoft's
	C library, but also to smuggle the command line through cmd.exe.
	(win_make_cmdline): Use win_escape_cmd to wrap the command.
	Escape the quotes which are placed around arguments, so cmd.exe
	doesn't interpret them, which will cause it to suppress its processing
	of the caret escapes.

2015-04-15  Kaz Kylheku  <kaz@kylheku.com>

	Allow quasiquotes in braces and quasiliterals, and quotes in braces.

	* parser.l: Consolidate rules for recognizing quote, unquote, and
	quasiquote. An effect of this is that quasiquotes can now occur in
	braces and in string quasiliterals.

	* parser.y (quasi_item): Support quotes and quasiquotes as quasi items:
	that is to say, i.e. objects denoted by @ in a quasiliteral.

2015-04-14  Kaz Kylheku  <kaz@kylheku.com>

	Diagnose trailing junk in numeric literals.

	* parser.l: Combining the handling of hex, octal and binary numeric
	literals into a single rule. Implementing an additional rule which
	diagnoses such tokens that have trailing junk. Thus, something
	like #x1F2AZ is now invalid syntax.

2015-04-11  Kaz Kylheku  <kaz@kylheku.com>

	Implementing while* and until* loops.

	* eval.c (while_star_s, until_star_s): New symbol variables.
	(me_while_star, me_until_star): New static functions.
	(eval_init): Initialize new variables. Register while* and
	until* macros.

	* txr.1: Documented while* and until*.

	* txr.vim, tl.vim: Regenerated.

2015-04-11  Kaz Kylheku  <kaz@kylheku.com>
